# oracle-aidp-samples

./: .gitignore  CONTRIBUTING.md  README.md
ai/claude-code-plugins/oracle-ai-data-platform-fusion-bundle/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
ai/claude-code-plugins/oracle-ai-data-platform-fusion-bundle/.claude-plugin/: marketplace.json  plugin.json
ai/claude-code-plugins/oracle-ai-data-platform-fusion-bundle/docs/: oac_mcp_setup.md  oac_rest_api_setup.md
ai/claude-code-plugins/oracle-ai-data-platform-fusion-bundle/examples/: aidp.config.example.yaml  full_finance.yaml  minimal_gl_only.yaml
data-engineering/data_quality/: Makefile  README.md  pyproject.toml  requirements-anomaly.txt  requirements-core.txt  requirements-dev.txt  requirements-forecast.txt  requirements-local.txt  requirements-spark.txt  requirements-viz.txt  requirements.txt
data-engineering/data_quality/docs/: CHANGELOG.md  architecture.md  backfill_and_soft_delete.md  comparison.md  configuration.md  getting_started.md  jinja_rendering.md  notifications.md  profiling.md  programmatic_api.md  wap_pattern.md
data-engineering/data_quality/docs/collectors/: README.md  aggregation.md  custom_query.md  metrics.md  profiling.md  recency.md  sample.md
data-engineering/data_quality/docs/examples/: anomaly_detection.yaml  custom_sql_query_check.yaml  forecast_check.yaml  full_config.yaml  historical_check.yaml  profiling_check.yaml  programmatic_usage.py  slo_check.yaml  threshold_check.yaml  wap_pattern.yaml
data-engineering/data_quality/docs/notifications/: README.md  email.md  grouping.md  slack.md  webhook.md
data-engineering/data_quality/docs/validators/: README.md  drift.md  forecast.md  partition_anchoring.md  pattern.md  shape.md  slo.md  threshold.md  validator_collector_matrix.md
data-engineering/data_quality/examples/: backfill_quickstart.py
data-engineering/data_quality/qualifire/: __init__.py  api.py  cli.py
data-engineering/data_quality/qualifire/backends/: base.py  pandas_backend.py  spark_backend.py
data-engineering/data_quality/qualifire/collection/: _filters.py  _partition.py  aggregation.py  base.py  custom_query.py  metrics.py  profiler.py  recency.py  sampler.py
data-engineering/data_quality/qualifire/core/: _redaction.py  backfill.py  backfill_report.py  config.py  context.py  deactivate.py  duration.py  engine.py  exceptions.py  models.py  secrets.py  selectors.py
data-engineering/data_quality/qualifire/notification/: _redact.py  base.py  console_notifier.py  email_notifier.py  slack_notifier.py  webhook_notifier.py
data-engineering/data_quality/qualifire/reporting/: __init__.py  _snapshot_details.py  health.py  html_report.py  plots.py  storage_factory.py  system_table.py
data-engineering/data_quality/qualifire/storage/: _predicates.py  base.py  delta_storage.py  external_catalog.py  factory.py  jdbc_storage.py  sqlite_storage.py
data-engineering/data_quality/qualifire/validation/: _drift_explainer.py  _encoding.py  base.py  forecast.py  historical.py  isolation_forest.py  pattern_check.py  slo.py  threshold.py
data-engineering/data_quality/qualifire/wap/: pattern.py
data-engineering/data_quality/scripts/: test_precheck.py
data-engineering/data_quality/tests/: conftest.py  test_aggregation_dict_form.py  test_api.py  test_api_extra.py  test_api_from_config.py  test_api_secrets.py  test_backfill.py  test_backfill_e2e.py  test_backfill_max_partitions.py  test_backfill_parallelism.py  test_backfill_partition_column_autodetect.py  test_backfill_severity_before.py  test_cli.py  test_cli_backfill.py  test_cli_run.py  test_columns_descriptions.py  test_config.py  test_config_partition_step.py  test_context.py  test_deactivate_metric.py  test_docs_links.py  test_duration.py  test_e2e.py  test_engine.py  test_engine_failure_classification.py  test_engine_routing.py  test_feature_workflow_hygiene.py  test_findings_sweep.py  test_interactive_dashboard.py  test_models.py  test_partition_ts.py  test_reporting_charts.py  test_secrets.py  test_selectors.py  test_signed_drift.py  test_skip_recollection.py  test_skip_renotification.py  test_skip_revalidation.py  test_validate_df.py  test_wap.py  (+1 more)
data-engineering/data_quality/tests/_e2e_support/: backends.py  reporting.py
data-engineering/data_quality/tests/manual/: dashboard_charts.ipynb  dashboard_html.ipynb  notebook_complex_types.ipynb  notebook_end_to_end.ipynb  notebook_overall.ipynb  pyspark_setup.ipynb
data-engineering/data_quality/tests/test_backends/: test_pandas.py  test_pandas_full.py  test_spark.py  test_spark_real.py
data-engineering/data_quality/tests/test_collection/: test_collectors.py  test_filters.py  test_profiling_engine.py
data-engineering/data_quality/tests/test_e2e_industries/: _skip_manifest.py  conftest.py
data-engineering/data_quality/tests/test_notification/: test_base.py  test_drift_explainer_rendering.py  test_notifiers.py  test_redact.py
data-engineering/data_quality/tests/test_reporting/: test_dashboard_renderers_node.py  test_health.py  test_html.py  test_plots.py  test_snapshot_details.py
data-engineering/data_quality/tests/test_storage/: test_bulk_history_contract.py  test_bulk_suppression.py  test_dedupe_consistency.py  test_details_json_roundtrip.py  test_external_catalog_real.py  test_jdbc_bucketing_real.py  test_soft_delete_sqlite.py  test_spark_storages.py  test_sqlite.py  test_step_bucketing.py
data-engineering/data_quality/tests/test_validation/: test_drift_explainer.py  test_drift_explainer_per_slice.py  test_encoding.py  test_forecast.py  test_historical.py  test_historical_extra.py  test_isolation_forest.py  test_isolation_forest_redaction.py  test_null_safe.py  test_pattern_check.py  test_pattern_check_redaction.py  test_slo.py  (+2 more)
data-engineering/tpcds-benchmark/: LICENSE  NOTICE  README.md  aidp_benchmark_v1_2.ipynb  pyproject.toml  setup_tpcds.py
data-engineering/tpcds-benchmark/aidp_benchmark/: __init__.py  benchmark.py  config.py  generator.py  results.py
data-engineering/tpcds-benchmark/docs/: SETUP.md  TROUBLESHOOTING.md
(+902 files in other folders)
