[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qualifire"
version = "0.1.0"
description = "Data quality validation library with SLO checks, rule-based validation, time-series forecasting, and unsupervised anomaly detection"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Oracle AIDP Data Engineering"},
]
keywords = ["data-quality", "validation", "pyspark", "anomaly-detection", "forecasting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
# pyspark is intentionally opt-in via the explicit `[spark]` extra
# and NOT in `[all]`. The library's primary deployment target is
# AIDP Workbench, which provisions Spark out-of-band; installing
# `qualifire[all]` there must not co-install pyspark and overwrite
# the pre-provisioned runtime. Local devs who want a Spark-capable
# environment install `[all,spark]` together.
spark = ["pyspark>=3.5"]
pandas = ["pandasql>=0.7.3"]
forecast = ["prophet>=1.1"]
anomaly = ["scikit-learn>=1.2", "shap>=0.42"]
# Visualisation extras — used by `generate_interactive_html(inline_plotly_js=True)`
# and the matplotlib + plotly dashboard notebooks under tests/manual/.
# Optional at runtime: the interactive dashboard's CDN form works without
# them; only the inline-bundled-JS variant + the chart notebooks need them.
viz = ["pandas>=2.2", "plotly>=5.0", "matplotlib>=3.7"]
all = [
    "pandasql>=0.7.3",
    "prophet>=1.1",
    "scikit-learn>=1.2",
    "shap>=0.42",
    "pandas>=2.2",
    "plotly>=5.0",
    "matplotlib>=3.7",
]
dev = ["pytest>=7.0", "pytest-mock>=3.10", "pytest-cov>=4.0", "pandasql>=0.7.3"]

[project.scripts]
qualifire = "qualifire.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qualifire*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
